--- a/V3/index.html
+++ b/V3/index.html
@@ -282,12 +282,10 @@
 
         <footer id="tempFooter" style="margin-top: -4em">
             <div style="margin-left: 1em;margin-top: -1.5em;position: absolute;width: 75%;">
-                <p class="labName">Developed by Amrita University Under research grant from
-                    <br>Ministry of Electronics and Information Technology
-                </p>
+                <p class="labName">
             </div>
             <div style="position:relative">
-                <div style="float:right;position: absolute;top:-1em;right:2em;"><img src="template/images/dit_logo.gif">
+                <div style="float:right;position: absolute;top:-1em;right:2em;">
                 </div>
             </div>
         </footer>
